--- a/MyApplication3/app/src/main/AndroidManifest.xml
+++ b/MyApplication3/app/src/main/AndroidManifest.xml
@@ -12,39 +12,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
-
-<!--        <activity-->
-<!--            android:name=".Home"-->
-<!--            android:exported="false" />-->
+        <activity
+            android:name=".SplashScreen"
+            android:exported="false" />
+        <!-- <activity -->
+        <!-- android:name=".Home" -->
+        <!-- android:exported="false" /> -->
         <activity
             android:name=".Contact"
             android:exported="false" />
-
 
         <activity
             android:name=".Home"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
+            android:theme="@style/Theme.MyApplication">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-<!--        <activity-->
-<!--            android:name=".MainActivity"-->
-<!--            android:exported="true"-->
-<!--            android:label="@string/app_name"-->
-<!--            android:theme="@style/Theme.MyApplication">-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-<!--        </activity>-->
     </application>
 
 </manifest>
