--- a/MyApplication3/app/src/main/AndroidManifest.xml
+++ b/MyApplication3/app/src/main/AndroidManifest.xml
@@ -13,15 +13,16 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".SplashScreen"
+            android:name=".Employee"
             android:exported="false" />
-        <!-- <activity -->
+        <activity
+            android:name=".SplashScreen"
+            android:exported="false" /> <!-- <activity -->
         <!-- android:name=".Home" -->
         <!-- android:exported="false" /> -->
         <activity
             android:name=".Contact"
             android:exported="false" />
-
         <activity
             android:name=".Home"
             android:exported="true"
